Fixed last border appearing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -3701,7 +3701,7 @@
 				}
 
 				.spotlight .content {
-					border-top-width: 0.2em !important;
+					/*border-top-width: 0.2em !important;*/
 					padding: 3.25em 1.5em 1.25em 1.5em !important;
 				}
 
